--- a/Robotic_Arm/MDK-ARM/Robotic_Arm/Robotic_Arm.build_log.htm
+++ b/Robotic_Arm/MDK-ARM/Robotic_Arm/Robotic_Arm.build_log.htm
@@ -21,15 +21,16 @@ Target DLL:      CMSIS_AGDI.dll V1.33.18.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-E:\stm32Project\Robotic_Arm\MDK-ARM\Robotic_Arm.uvprojx
+E:\stm32Project\robotarm\Robotic_Arm\MDK-ARM\Robotic_Arm.uvprojx
 Project File Date:  05/10/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.22', folder: 'D:\keil_5\ARM\ARMCLANG\Bin'
 Build target 'Robotic_Arm'
 compiling main.c...
+assembling startup_stm32f407xx.s...
 linking...
-Program Size: Code=14192 RO-data=488 RW-data=12 ZI-data=2268  
+Program Size: Code=14204 RO-data=488 RW-data=12 ZI-data=2268  
 FromELF: creating hex file...
 "Robotic_Arm\Robotic_Arm.axf" - 0 Error(s), 0 Warning(s).
 
