--- a/Robotic_Arm/MDK-ARM/Robotic_Arm/Robotic_Arm.build_log.htm
+++ b/Robotic_Arm/MDK-ARM/Robotic_Arm/Robotic_Arm.build_log.htm
@@ -3,60 +3,86 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: ¦ÌVision V5.40.0.0
-Copyright (C) 2024 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: 1 MECHREVO, 1, LIC=65ISZ-JRWPL-01IP1-CKIQX-BKKDI-34B5U
+IDE-Version: ¦ÌVision V5.24.2.0
+Copyright (C) 2017 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: tian Lenovo, 123, LIC=HN0AE-5X9F8-012P1-CHJJA-JICF0-NV5NH
  
 Tool Versions:
-Toolchain:       MDK-ARM Plus  Version: 5.40.0.3
-Toolchain Path:  D:\keil_5\ARM\ARMCLANG\Bin
-C Compiler:      ArmClang.exe V6.22
-Assembler:       Armasm.exe V6.22
-Linker/Locator:  ArmLink.exe V6.22
-Library Manager: ArmAr.exe V6.22
-Hex Converter:   FromElf.exe V6.22
-CPU DLL:         SARMCM3.DLL V5.40.0.3
-Dialog DLL:      DCM.DLL V1.17.5.0
-Target DLL:      CMSIS_AGDI.dll V1.33.18.0
-Dialog DLL:      TCM.DLL V1.56.4.0
+Toolchain:       MDK-ARM Plus  Version: 5.24.1
+Toolchain Path:  F:\tools\keil\ARM\ARMCLANG\Bin
+C Compiler:      ArmClang.exe V6.7
+Assembler:       Armasm.exe V6.7
+Linker/Locator:  ArmLink.exe V6.7
+Library Manager: ArmAr.exe V6.7
+Hex Converter:   FromElf.exe V6.7
+CPU DLL:         SARMCM3.DLL V5.24.1
+Dialog DLL:      DCM.DLL V1.16.0.0
+Target DLL:      CMSIS_AGDI.dll V1.28.3.0
+Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-E:\stm32Project\robotarm\Robotic_Arm\MDK-ARM\Robotic_Arm.uvprojx
+F:\project\git\robotarm\Robotic_Arm\MDK-ARM\Robotic_Arm.uvprojx
 Project File Date:  05/10/2025
 
 <h2>Output:</h2>
-*** Using Compiler 'V6.22', folder: 'D:\keil_5\ARM\ARMCLANG\Bin'
-Build target 'Robotic_Arm'
-compiling main.c...
+*** Using Compiler 'V6.7', folder: 'F:\tools\keil\ARM\ARMCLANG\Bin'
+Rebuild target 'Robotic_Arm'
 assembling startup_stm32f407xx.s...
+compiling stm32f4xx_hal_msp.c...
+compiling gpio.c...
+compiling dma.c...
+compiling tim.c...
+compiling usart.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_timebase_tim.c...
+compiling stm32f4xx_it.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling main.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal_tim.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling Kinematic_solution.c...
+compiling servo.c...
+compiling stm32f4xx_hal_uart.c...
+compiling bsp_usart.c...
 linking...
-Program Size: Code=14204 RO-data=488 RW-data=12 ZI-data=2268  
+Program Size: Code=15008 RO-data=480 RW-data=12 ZI-data=2348  
 FromELF: creating hex file...
 "Robotic_Arm\Robotic_Arm.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                https://www.keil.com/pack/ARM.CMSIS.6.1.0.pack
-                ARM::CMSIS@6.1.0
-                CMSIS (Common Microcontroller Software Interface Standard)
-   * Component: CORE Version: 6.1.0
+                http://www.keil.com/pack/ARM.CMSIS.5.0.1.pack
+                ARM.CMSIS.5.0.1
+                CMSIS (Cortex Microcontroller Software Interface Standard)
+   * Component: CORE Version: 5.0.1
 
 Package Vendor: Keil
-                https://www.keil.com/pack/Keil.STM32F4xx_DFP.2.17.1.pack
-                Keil::STM32F4xx_DFP@2.17.1
+                http://www.keil.com/pack/Keil.STM32F4xx_DFP.2.5.0.pack
+                Keil.STM32F4xx_DFP.2.5.0
                 STMicroelectronics STM32F4 Series Device Support, Drivers and Examples
 
 <h2>Collection of Component include folders:</h2>
-  ./RTE/_Robotic_Arm
-  D:/keil_5/pack/ARM/CMSIS/6.1.0/CMSIS/Core/Include
-  D:/keil_5/pack/Keil/STM32F4xx_DFP/2.17.1/Drivers/CMSIS/Device/ST/STM32F4xx/Include
+  .\RTE\_Robotic_Arm
+  F:\tools\keil\ARM\CMSIS\5.0.1\CMSIS\Include
+  F:\tools\keil\Keil\STM32F4xx_DFP\2.5.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE@6.1.0
-      Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+   * Component: ARM::CMSIS:CORE:5.0.1
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
